Mon Oct 06 00:12:13 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	  - Fixed the scaling on the conversations button and the tabs.

Mon Oct 06 00:04:34 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountsWidnow.cpp:
	* src/QGaimBuddyList.cpp:
	* src/QGaimImageUtils.h:
	* src/QGaimProtocolBox.cpp:
	* src/QGaimProtocolUtils.cpp:
	* src/QGaimProtocolUtils.h:
	* gaim.pro:
	  - The protocol icons and status icons are now their normal,
	    larger versions, and are scaled down to the appropriate sizes
	    in the buddy list, menus, drop-down boxes, tabs, and account
	    editor. In time, we'll be able to have a Big List for
	    users of larger resolution screens.

Sun Oct 05 20:05:48 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaim.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimDialogs.cpp:
	* src/main.cpp:
	  - API sync to libgaim 0.71cvs-20031005

Sat Sep 27 00:40:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Fixed a crash when right-clicking on parts of the buddy list.

Sat Sep 27 00:30:44 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Fixed a crash when pressing the chat button when no nodes are
	    selected.
	  - Changed the default IM and Chat icons to be the New IM and
	    New Chat icons.

Sat Sep 27 00:23:52 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - We were connecting signals in the QGaimConvButton destructor.
	    Bad! Those should be disconnected.

Fri Sep 26 23:33:30 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Clicking the IM button on a contact now opens an IM window